<resources>
    <string name="app_name">less2</string>
    <string name="name">Красный павильон</string>
    <string name="author">Роберт ван Гулик</string>
    <string name="old_price">615 p.</string>
    <string name="new_prise">361 p.</string>
    <string name="discount">-45%</string>
    <string name="todo">TODO</string>
    <string name="annotation">\"Райский остров\" известен в округе как место, где обеспеченные господа могут предаваться чревоугодию, азартным играм и проводить время в обществе изысканных куртизанок. Судья Ди - человек строгих правил, и здесь он оказался не ради плотских утех. Ему предстоит разрешить загадку Красного павильона, который уже трижды стал местом таинственных самоубийств. И вот однажды ночью он проснулся от странного шороха в комнате… Знаменитый судья Ди, китайский \"Шерлок Холмс\" - в серии блестящих детективов прославленного Роберта ван Гулика.</string>
    <string name="Part_read">Прочитать отрывок в PDF(0.4MB)</string>
    <string name="Product">Акция по этому товару</string>
    <string name="left">Осталось 3 дня 6 часов</string>
    <string name="best_book">Скидка 45% по акции Лучшая покупка дня</string>
</resources>