<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="290dp"
        android:layout_height="381dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/red_pavilion2"
        app:layout_constraintBottom_toTopOf="@+id/productTitle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="180dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImage" />

    <TextView
        android:id="@+id/productAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="25dp"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="#3C3F41"
        app:layout_constraintBottom_toTopOf="@+id/Part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTitle" />

    <TextView
        android:id="@+id/productOldPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:text="@string/old_price"
        android:textColor="#555555"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/productD"
        app:layout_constraintEnd_toStartOf="@+id/productDiscount"
        app:layout_constraintStart_toEndOf="@+id/productPrice"
        app:layout_constraintTop_toBottomOf="@+id/productAuthor"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/red_line"
        android:layout_width="48dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_red_line"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/productOldPrice"
        app:layout_constraintEnd_toEndOf="@+id/productOldPrice"
        app:layout_constraintStart_toStartOf="@+id/productOldPrice"
        app:layout_constraintTop_toBottomOf="@+id/productAuthor" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/new_prise"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/productD"
        app:layout_constraintEnd_toStartOf="@+id/productOldPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productAuthor" />

    <TextView
        android:id="@+id/productDiscount"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_red"
        android:gravity="center"
        android:text="@string/discount"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/Part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productOldPrice"
        app:layout_constraintTop_toBottomOf="@+id/productAuthor"
        tools:ignore="TextContrastCheck" />


    <ImageView
        android:id="@+id/action"
        android:layout_width="226dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/ic_1"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="0.5:0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productD" />

    <TextView
        android:id="@+id/productDiscount2"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/ic_black"
        android:gravity="center"
        android:text="@string/discount"
        android:textColor="#FFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/action"
        app:layout_constraintEnd_toEndOf="@+id/action"
        app:layout_constraintStart_toStartOf="@+id/action"
        app:layout_constraintTop_toTopOf="@+id/action" />

    <TextView
        android:id="@+id/product"
        android:layout_width="121dp"
        android:layout_height="17dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/left"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#D50000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/action"
        app:layout_constraintEnd_toEndOf="@+id/action"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/action"
        app:layout_constraintTop_toBottomOf="@+id/product2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/product2"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/best_book"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/action"
        app:layout_constraintEnd_toEndOf="@+id/action"
        app:layout_constraintStart_toStartOf="@+id/action"
        app:layout_constraintTop_toTopOf="@+id/action" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_menu_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_annotation"
        android:layout_width="404dp"
        android:layout_height="95dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:text="@string/annotation"
        android:textColor="#555555"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action" />

    <TextView
        android:id="@+id/Part"
        android:layout_width="206dp"
        android:layout_height="18dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Part_read"
        android:textColor="#1976D2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/productD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productOldPrice" />

    <TextView
        android:id="@+id/productD"
        android:layout_width="206dp"
        android:layout_height="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="190dp"
        android:text="@string/Product"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>